--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,32 +7,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main" tools:context="com.example.heman.noteapp.MainActivity">
+    tools:showIn="@layout/activity_main" tools:context="com.example.heman.noteapp.MainActivity"
+    android:background="@drawable/abc_list_selector_background_transition_holo_light"
+    android:clickable="true">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Note"
-        android:id="@+id/button"
-        android:layout_marginTop="49dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="178dp"
+        android:id="@+id/noteadding"
+        android:background="@color/background_floating_material_light"
+        android:layout_alignParentStart="false">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete Note"
-        android:id="@+id/button2"
-        android:layout_alignTop="@+id/button"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit Note"
-        android:id="@+id/button3"
-        android:layout_alignTop="@+id/button2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:inputType="textMultiLine"
+            android:lines="8"
+            android:gravity="top|left"
+            android:scrollbars="vertical"
+            android:background="@android:color/transparent" />
+    </RelativeLayout>
 </RelativeLayout>
