I've changed the database slightly to add image and I've added a button that  opens a android camera app. I've written a code to get the image taken and save it to my SQLite databse. In order to do that I need to convert bitmap image to byte[]. I also need to modify my Listview Adapter to include images to database.

--- a/app/src/main/res/layout/note_input_dailog.xml
+++ b/app/src/main/res/layout/note_input_dailog.xml
@@ -21,8 +21,14 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add"
+        android:text="Add Text"
         android:layout_marginTop="40dp"
         android:id="@+id/Add" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Image"
+        android:id="@+id/add_img" />
 
 </LinearLayout>
