--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,19 +8,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context="com.example.heman.noteapp.MainActivity"
-    android:clickable="true">
+    android:clickable="false"
+    android:contextClickable="true"
+    android:theme="@style/AlertDialog.AppCompat.Light"
+    android:background="@color/abc_secondary_text_material_light">
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+"
+        android:textSize="30sp"
         android:id="@+id/addNote"
         android:onClick="onClick_addNote"
+        android:singleLine="true"
+        android:background="@android:color/holo_blue_light"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        />
+        android:layout_alignParentTop="true" />
 
     <ListView
         android:layout_width="wrap_content"
