--- a/app/src/main/res/layout/del_upd.xml
+++ b/app/src/main/res/layout/del_upd.xml
@@ -13,4 +13,11 @@
         android:layout_height="wrap_content"
         android:text="Edit"
         android:id="@+id/edit" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Image"
+        android:id="@+id/add_image" />
+
 </LinearLayout>
