--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -17,9 +17,9 @@
         android:id="@+id/textViewData" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="57dp"
+        android:layout_width="9dp"
+        android:layout_height="123dp"
         android:id="@+id/imageView"
-        android:paddingLeft="20dp"
-        android:layout_weight="0.63" />
+        android:paddingLeft="20dp" />
+
 </LinearLayout>
