--- a/app/src/main/res/layout/del_upd.xml
+++ b/app/src/main/res/layout/del_upd.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:gravity="center"
+    android:paddingBottom="20dp">
 
     <Button
         android:layout_width="wrap_content"
@@ -18,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Image"
-        android:id="@+id/add_image" />
+        android:id="@+id/add_image"
+        android:paddingBottom="20dp"/>
 
 </LinearLayout>
