--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:weightSum="1">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:weightSum="1"
+    android:paddingBottom="15dp"
+    android:paddingTop="15dp"
+    >
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textViewNumber"
-        android:paddingRight="20dp"/>
+        android:paddingRight="20dp"
+        android:textSize="20sp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:id="@+id/textViewData" />
+        android:textSize="20sp"
+        android:id="@+id/textViewData"
+        android:paddingRight="20dp"/>
 
     <ImageView
         android:layout_width="9dp"
-        android:layout_height="123dp"
+        android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:paddingLeft="20dp" />
+         />
 
 </LinearLayout>
