--- a/app/src/main/res/layout/del_upd.xml
+++ b/app/src/main/res/layout/del_upd.xml
@@ -23,4 +23,11 @@
         android:id="@+id/add_image"
         android:paddingBottom="20dp"/>
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:id="@+id/email" />
+
 </LinearLayout>
